[gd_scene load_steps=3 format=3 uid="uid://bomumu3hwif6h"]

[ext_resource type="Script" path="res://scripts/workday_summary.gd" id="1_ssfwr"]
[ext_resource type="PackedScene" uid="uid://bbeectpo405b8" path="res://scenes/balance_card.tscn" id="2_fi4y4"]

[node name="WorkdaySummary" type="Node2D"]
script = ExtResource("1_ssfwr")

[node name="StaticElements" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="StaticElements"]
offset_left = 364.0
offset_top = 41.0
offset_right = 1572.0
offset_bottom = 818.0
color = Color(0.588235, 1, 0.219608, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="StaticElements"]
offset_left = 400.0
offset_top = 77.0
offset_right = 1536.0
offset_bottom = 782.0
color = Color(0.851769, 0.851769, 0.851769, 1)
metadata/_edit_use_anchors_ = true

[node name="TitleLabel" type="Label" parent="StaticElements"]
offset_left = 600.0
offset_top = 85.0
offset_right = 1337.0
offset_bottom = 319.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "Workday Summary"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StatsLabel" type="Label" parent="StaticElements"]
offset_left = 506.0
offset_top = 317.0
offset_right = 823.0
offset_bottom = 546.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Plates delivered:


Plates dropped: "
metadata/_edit_use_anchors_ = true

[node name="VariableElements" type="Node" parent="."]

[node name="DeliveredLabel" type="Label" parent="VariableElements"]
offset_left = 856.0
offset_top = 283.0
offset_right = 1406.0
offset_bottom = 443.0
theme_override_colors/font_color = Color(0.266319, 0.804676, 0, 1)
theme_override_font_sizes/font_size = 90
text = "80 x $1 = $80"
metadata/_edit_use_anchors_ = true

[node name="DroppedLabel" type="Label" parent="VariableElements"]
offset_left = 856.0
offset_top = 459.0
offset_right = 1464.0
offset_bottom = 588.0
theme_override_colors/font_color = Color(1, 0.174173, 0.127216, 1)
theme_override_font_sizes/font_size = 90
text = "10 x -$2 = -$20"
metadata/_edit_use_anchors_ = true

[node name="TotalLabel" type="Label" parent="VariableElements"]
offset_left = 406.0
offset_top = 613.0
offset_right = 1530.0
offset_bottom = 769.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 90
text = "TOTAL EARNED: $60"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BalanceCard" parent="VariableElements" instance=ExtResource("2_fi4y4")]
position = Vector2(779, 747)

[node name="NextButton" type="Button" parent="VariableElements"]
offset_left = 713.0
offset_top = 829.0
offset_right = 1224.0
offset_bottom = 992.0
theme_override_font_sizes/font_size = 40
text = "NEXT"
metadata/_edit_use_anchors_ = true
